update SVD by suprise

--- a/advanced_SVD/phase2_FunkSVD.ipynb
+++ b/advanced_SVD/phase2_FunkSVD.ipynb
@@ -13,7 +13,7 @@
    "id": "9bc1e4ca",
    "metadata": {},
    "source": [
-    "### **1. Funk SVD**"
+    "## **1. Funk SVD**"
    ]
   },
   {
@@ -1366,12 +1366,397 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7493d32",
+   "metadata": {},
+   "source": [
+    "### **Funk-SVD với thư viện Surprise**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267af855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install scikit-surprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "68c9cacd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from surprise import SVD, Dataset, Reader, accuracy\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b6d652c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SurpriseFunkSVD:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        n_factors=50,\n",
+    "        lr_all=0.007,\n",
+    "        reg_all=0.02,\n",
+    "        n_epochs=35,\n",
+    "        verbose=True,\n",
+    "        rating_scale=(0.5, 5.0)\n",
+    "        \n",
+    "    ):\n",
+    "        self.model = SVD(n_factors=n_factors, lr_all=lr_all, reg_all=reg_all,\n",
+    "                         n_epochs=n_epochs, verbose=verbose)\n",
+    "        self.rating_scale = rating_scale\n",
+    "        self.verbose = verbose\n",
+    "        self.train_rmse = []\n",
+    "        self.val_rmse = []\n",
+    "\n",
+    "    def fit(self, train_df, val_df=None):\n",
+    "        reader = Reader(rating_scale=self.rating_scale)\n",
+    "        train_data = Dataset.load_from_df(train_df[['user_idx', 'movie_idx', 'rating']], reader)\n",
+    "        trainset = train_data.build_full_trainset()\n",
+    "        self.model.fit(trainset)\n",
+    "\n",
+    "        # Nếu có validation set\n",
+    "        if val_df is not None:\n",
+    "            valset = list(val_df[['user_idx', 'movie_idx', 'rating']].itertuples(index=False, name=None))\n",
+    "            val_preds = self.model.test(valset)\n",
+    "            rmse_val = accuracy.rmse(val_preds, verbose=False)\n",
+    "            self.val_rmse.append(rmse_val)\n",
+    "            if self.verbose:\n",
+    "                print(f\"Validation RMSE: {rmse_val:.4f}\")\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, u_idx: int, i_idx: int) -> float:\n",
+    "        est = self.model.predict(uid=u_idx, iid=i_idx).est\n",
+    "        return float(np.clip(est, *self.rating_scale))\n",
+    "\n",
+    "    def predict_batch(self, users, items):\n",
+    "        preds = []\n",
+    "        for u, i in tqdm(zip(users, items), total=len(users), desc=\"Predicting\"):\n",
+    "            preds.append(self.predict(u, i))\n",
+    "        return np.array(preds)\n",
+    "\n",
+    "    def recommend_for_nan(self, df):\n",
+    "        \"\"\"\n",
+    "        Dự đoán rating cho các dòng có rating = NaN.\n",
+    "        \"\"\"\n",
+    "        df_nan = df[df[\"rating\"].isna()].copy()\n",
+    "        predictions = self.predict_batch(df_nan[\"user_idx\"].values, df_nan[\"movie_idx\"].values)\n",
+    "        df_nan[\"predicted_rating\"] = predictions\n",
+    "        return df_nan\n",
+    "\n",
+    "    def save(self, file_path: str):\n",
+    "        import joblib\n",
+    "        joblib.dump(self.model, file_path)\n",
+    "\n",
+    "    def load(self, file_path: str):\n",
+    "        import joblib\n",
+    "        self.model = joblib.load(file_path)\n",
+    "        return self\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0578bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing epoch 0\n",
+      "Processing epoch 1\n",
+      "Processing epoch 2\n",
+      "Processing epoch 3\n",
+      "Processing epoch 4\n",
+      "Processing epoch 5\n",
+      "Processing epoch 6\n",
+      "Processing epoch 7\n",
+      "Processing epoch 8\n",
+      "Processing epoch 9\n",
+      "Processing epoch 10\n",
+      "Processing epoch 11\n",
+      "Processing epoch 12\n",
+      "Processing epoch 13\n",
+      "Processing epoch 14\n",
+      "Processing epoch 15\n",
+      "Processing epoch 16\n",
+      "Processing epoch 17\n",
+      "Processing epoch 18\n",
+      "Processing epoch 19\n",
+      "Processing epoch 20\n",
+      "Processing epoch 21\n",
+      "Processing epoch 22\n",
+      "Processing epoch 23\n",
+      "Processing epoch 24\n",
+      "Processing epoch 25\n",
+      "Processing epoch 26\n",
+      "Processing epoch 27\n",
+      "Processing epoch 28\n",
+      "Processing epoch 29\n",
+      "Processing epoch 30\n",
+      "Processing epoch 31\n",
+      "Processing epoch 32\n",
+      "Processing epoch 33\n",
+      "Processing epoch 34\n",
+      "Validation RMSE: 0.7859\n",
+      "3.6614406904489294\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39mpredict(u_idx\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, i_idx\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m))\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Dự đoán hàng loạt:\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43muser_idx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmovie_idx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Gợi ý cho các dòng chưa có rating:\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# rec_df = model.recommend_for_nan(df_with_nan)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[18], line 41\u001b[0m, in \u001b[0;36mSurpriseFunkSVD.predict_batch\u001b[1;34m(self, users, items)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict_batch\u001b[39m(\u001b[38;5;28mself\u001b[39m, users, items):\n\u001b[0;32m     40\u001b[0m     preds \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m---> 41\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m u, i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m(\u001b[38;5;28mzip\u001b[39m(users, items), total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(users), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredicting\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m     42\u001b[0m         preds\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(u, i))\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(preds)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tqdm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model = SurpriseFunkSVD(n_factors=50, n_epochs=35)\n",
+    "model.fit(train_df, val_df)\n",
+    "\n",
+    "# Dự đoán cho một cặp cụ thể:\n",
+    "print(model.predict(u_idx=10, i_idx=20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5278f449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 2000008/2000008 [00:16<00:00, 122639.67it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dự đoán hàng loạt:\n",
+    "preds = model.predict_batch(val_df[\"user_idx\"], val_df[\"movie_idx\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8ff25e13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_movies_surprise(user_id_raw, model, N=10):\n",
+    "    if user_id_raw not in user_enc.classes_:\n",
+    "        raise ValueError(\"User ngoài tập huấn luyện!\")\n",
+    "\n",
+    "    u_idx = user_enc.transform([user_id_raw])[0]\n",
+    "\n",
+    "    seen = set(df.loc[df['user_idx'] == u_idx, 'movie_idx'])\n",
+    "    unseen_idx = np.setdiff1d(np.arange(n_items), list(seen)) \n",
+    "\n",
+    "    pred_scores = []\n",
+    "    for i in unseen_idx:\n",
+    "        pred = model.predict(u_idx, i)\n",
+    "        pred_scores.append((i, pred))\n",
+    "\n",
+    "    best_idx = sorted(pred_scores, key=lambda x: x[1], reverse=True)[:N]\n",
+    "    best_idx = [idx for idx, _ in best_idx]\n",
+    "\n",
+    "    out = pd.DataFrame({\n",
+    "        'movie_idx': best_idx,\n",
+    "        'pred_rating': [model.predict(u_idx, i) for i in best_idx]\n",
+    "    })\n",
+    "    out['movieId'] = movie_enc.inverse_transform(out['movie_idx'])\n",
+    "\n",
+    "    out = out.merge(movies[['movieId', 'title', 'genres']], on='movieId', how='left')\n",
+    "    out = out.merge(\n",
+    "        df[df['user_idx'] == u_idx][['movieId', 'rating']],\n",
+    "        on='movieId', how='left'\n",
+    "    )\n",
+    "\n",
+    "    return out[['movieId', 'title', 'genres', 'pred_rating', 'rating']].sort_values(\n",
+    "        'pred_rating', ascending=False\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "51d238d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gợi ý Top-10 cho user 95133:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>pred_rating</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>120807</td>\n",
+       "      <td>John Mulaney: New In Town (2012)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>4.452284</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>Castle, The (1997)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>4.448521</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5767</td>\n",
+       "      <td>Teddy Bear (Mis) (1981)</td>\n",
+       "      <td>Comedy|Crime</td>\n",
+       "      <td>4.446001</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>182723</td>\n",
+       "      <td>Cosmos: A Spacetime Odissey</td>\n",
+       "      <td>(no genres listed)</td>\n",
+       "      <td>4.427799</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2686</td>\n",
+       "      <td>Red Violin, The (Violon rouge, Le) (1998)</td>\n",
+       "      <td>Drama|Mystery</td>\n",
+       "      <td>4.406280</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>159817</td>\n",
+       "      <td>Planet Earth (2006)</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>4.387806</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4778</td>\n",
+       "      <td>Children Underground (2001)</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>4.375893</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>174489</td>\n",
+       "      <td>Don't Hug Me, I'm Scared II: Time (2014)</td>\n",
+       "      <td>Horror</td>\n",
+       "      <td>4.370730</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>130347</td>\n",
+       "      <td>Bill Hicks: Sane Man (1989)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>4.370357</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>65188</td>\n",
+       "      <td>Dear Zachary: A Letter to a Son About His Fath...</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>4.359970</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId                                              title  \\\n",
+       "0   120807                   John Mulaney: New In Town (2012)   \n",
+       "1     2618                                 Castle, The (1997)   \n",
+       "2     5767                            Teddy Bear (Mis) (1981)   \n",
+       "3   182723                        Cosmos: A Spacetime Odissey   \n",
+       "4     2686          Red Violin, The (Violon rouge, Le) (1998)   \n",
+       "5   159817                                Planet Earth (2006)   \n",
+       "6     4778                        Children Underground (2001)   \n",
+       "7   174489           Don't Hug Me, I'm Scared II: Time (2014)   \n",
+       "8   130347                        Bill Hicks: Sane Man (1989)   \n",
+       "9    65188  Dear Zachary: A Letter to a Son About His Fath...   \n",
+       "\n",
+       "               genres  pred_rating  rating  \n",
+       "0              Comedy     4.452284     NaN  \n",
+       "1              Comedy     4.448521     NaN  \n",
+       "2        Comedy|Crime     4.446001     NaN  \n",
+       "3  (no genres listed)     4.427799     NaN  \n",
+       "4       Drama|Mystery     4.406280     NaN  \n",
+       "5         Documentary     4.387806     NaN  \n",
+       "6         Documentary     4.375893     NaN  \n",
+       "7              Horror     4.370730     NaN  \n",
+       "8              Comedy     4.370357     NaN  \n",
+       "9         Documentary     4.359970     NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rand_user = 95133\n",
+    "print(f\"\\nGợi ý Top-10 cho user {rand_user}:\")\n",
+    "display(recommend_movies_surprise(rand_user, model, N=10))"
+   ]
   }
  ],
  "metadata": {
@@ -1390,7 +1775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
