update svdpp implement

--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -15,6 +15,7 @@
     "from tqdm import tqdm \n",
     "import matplotlib.pyplot as plt\n",
     "from collections import defaultdict\n",
+    "from random import sample\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
@@ -775,6 +776,8 @@
     "                 lr_all=0.007, \n",
     "                 reg_all=0.02, \n",
     "                 reg1=None, reg2=None,\n",
+    "                 decay=0.95,\n",
+    "                 seed=42,\n",
     "                 epochs=20):\n",
     "        self.ratings = ratings  \n",
     "        self.Nu = implicit_feedback  \n",
@@ -784,23 +787,25 @@
     "        self.reg1 = reg1 if reg1 is not None else reg_all\n",
     "        self.reg2 = reg2 if reg2 is not None else reg_all\n",
     "        self.epochs = epochs\n",
+    "        self.decay= decay\n",
     "\n",
     "        self.num_users = num_users\n",
     "        self.num_items = num_items\n",
     "\n",
-    "        self.bu = np.zeros(num_users)\n",
-    "        self.bi = np.zeros(num_items)\n",
+    "        self.bu = np.zeros(num_users, dtype=np.float32)\n",
+    "        self.bi = np.zeros(num_items, dtype=np.float32)\n",
     "\n",
-    "        self.pu = np.random.normal(0, 0.1, (num_users, n_factors))\n",
-    "        self.qi = np.random.normal(0, 0.1, (num_items, n_factors))\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        self.pu = 0.1 * rng.standard_normal((num_users, n_factors)).astype(np.float32)\n",
+    "        self.qi =  0.1 * rng.standard_normal((num_items, n_factors)).astype(np.float32)\n",
     "\n",
     "        # yj must cover all item indices that appear in implicit feedback\n",
     "        all_implicit_items = set()\n",
     "        for items in implicit_feedback.values():\n",
     "            all_implicit_items.update(items)\n",
-    "        self.yj = np.random.normal(0, 0.1, (num_items, n_factors))  # Pre-allocate full matrix\n",
+    "        self.yj = np.random.normal(0, 0.1, (num_items, n_factors)).astype(np.float32)  # Pre-allocate full matrix\n",
     "\n",
-    "        self.global_mean = np.mean([r for _, _, r in ratings])\n",
+    "        self.global_mean = np.float32(np.mean([r for _, _, r in ratings]))\n",
     "\n",
     "    def predict(self, u, i, sum_yj_u=None):\n",
     "        \"\"\"\n",
@@ -810,10 +815,24 @@
     "        if sum_yj_u is None:\n",
     "            implicit_items = self.Nu.get(u, set())\n",
     "            sqrt_Nu = math.sqrt(len(implicit_items)) if implicit_items else 1.0\n",
-    "            sum_yj_u = np.sum(self.yj[list(implicit_items)], axis=0) / sqrt_Nu if implicit_items else np.zeros(self.n_factors)\n",
+    "            sum_yj_u = (\n",
+    "                np.sum(self.yj[list(implicit_items)], axis=0) \n",
+    "                / np.float32(sqrt_Nu)).astype(np.float32) if implicit_items else np.zeros(self.n_factors, dtype=np.float32\n",
+    "            )\n",
     "\n",
     "        interaction = self.pu[u] + sum_yj_u\n",
     "        return self.global_mean + self.bu[u] + self.bi[i] + np.dot(interaction, self.qi[i])\n",
+    "\n",
+    "    def compute_sum_yj_dict(self):\n",
+    "        sum_yj_dict = {}\n",
+    "        for u in range(self.num_users):\n",
+    "            implicit_items = self.Nu.get(u, set())\n",
+    "            if implicit_items:\n",
+    "                sqrt_Nu = math.sqrt(len(implicit_items))\n",
+    "                sum_yj_dict[u] = (np.sum(self.yj[list(implicit_items)], axis=0) / np.float32(sqrt_Nu)).astype(np.float32)\n",
+    "            else:\n",
+    "                sum_yj_dict[u] = np.zeros(self.n_factors, dtype=np.float32)\n",
+    "        return sum_yj_dict\n",
     "\n",
     "    def train(self, val_set=None, early_stopping=False, patience=3):\n",
     "        \"\"\"\n",
@@ -830,21 +849,14 @@
     "            random.shuffle(self.ratings)\n",
     "\n",
     "            # Precompute sum_yj for each user\n",
-    "            sum_yj_dict = {}\n",
-    "            for u in range(self.num_users):\n",
-    "                implicit_items = self.Nu.get(u, set())\n",
-    "                if implicit_items:\n",
-    "                    sqrt_Nu = math.sqrt(len(implicit_items))\n",
-    "                    sum_yj_dict[u] = np.sum(self.yj[list(implicit_items)], axis=0) / sqrt_Nu\n",
-    "                else:\n",
-    "                    sum_yj_dict[u] = np.zeros(self.n_factors)\n",
+    "            sum_yj_dict = self.compute_sum_yj_dict()\n",
     "\n",
     "            for u, i, r in tqdm(self.ratings, desc=f\"Training Epoch {epoch+1}\", leave=False):\n",
     "                u = int(u)\n",
     "                i = int(i)\n",
     "                sum_yj_u = sum_yj_dict[u]\n",
     "                pred = self.predict(u, i, sum_yj_u)\n",
-    "                err = r - pred\n",
+    "                err = np.float32(r) - pred\n",
     "\n",
     "                # Update biases\n",
     "                self.bu[u] += self.lr_all * (err - self.reg1 * self.bu[u])\n",
@@ -865,8 +877,10 @@
     "                    for j in implicit_items:\n",
     "                        self.yj[j] += self.lr_all * (err * qi_i / sqrt_Nu - self.reg2 * self.yj[j])\n",
     "\n",
+    "            self.lr_all*=self.decay\n",
     "            # Evaluate RMSE\n",
-    "            train_rmse = self.rmse(self.ratings, sum_yj_dict)\n",
+    "            sum_yj_dict = self.compute_sum_yj_dict()\n",
+    "            train_rmse = self.rmse(self.ratings, precomputed_sum_yj=sum_yj_dict)\n",
     "            if val_set is not None:\n",
     "                val_rmse = self.rmse(val_set)\n",
     "                print(f\"Epoch {epoch+1} - Train RMSE: {train_rmse:.4f} | Val RMSE: {val_rmse:.4f}\")\n",
@@ -881,6 +895,7 @@
     "                        break\n",
     "            else:\n",
     "                print(f\"Epoch {epoch+1} - Train RMSE: {train_rmse:.4f}\")\n",
+    "\n",
     "\n",
     "    def rmse(self, dataset, precomputed_sum_yj=None):\n",
     "        \"\"\"\n",
@@ -953,15 +968,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1c78a947",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tạo dữ liệu train/test/val cho ratings (đã encode)\n",
-    "rating_train = train_df[['user_idx', 'movie_idx', 'rating']].to_numpy()\n",
-    "rating_val = val_df[['user_idx', 'movie_idx', 'rating']].to_numpy()\n",
-    "rating_test = test_df[['user_idx', 'movie_idx', 'rating']].to_numpy()"
+    "rating_train = train_df[['user_idx', 'movie_idx', 'rating']].to_numpy(dtype=np.float32)\n",
+    "rating_val = val_df[['user_idx', 'movie_idx', 'rating']].to_numpy(dtype=np.float32)\n",
+    "rating_test = test_df[['user_idx', 'movie_idx', 'rating']].to_numpy(dtype=np.float32)"
    ]
   },
   {
@@ -1007,10 +1022,33 @@
     "train_tags['user_idx'] = user_encoder.transform(train_tags['userId']).astype(int)\n",
     "train_tags['movie_idx'] = movie_encoder.transform(train_tags['movieId']).astype(int)\n",
     "\n",
-    "# Tạo implicit feedback từ tags\n",
+    "# Tạo implicit feedback từ tags \n",
     "implicit_train = defaultdict(set)\n",
+    "\n",
     "for row in train_tags.itertuples(index=False):\n",
     "    implicit_train[row.user_idx].add(row.movie_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6488ec30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tạo danh sách tất cả (user_idx, movie_idx) có rating\n",
+    "all_ratings = [\n",
+    "    (row.user_idx, row.movie_idx)\n",
+    "    for row in train_df.itertuples(index=False)\n",
+    "]\n",
+    "\n",
+    "# Lấy ngẫu nhiên tối đa N phần tử (nếu có đủ)\n",
+    "N = 100000  # hoặc số bạn chọn\n",
+    "selected_ratings = sample(all_ratings, min(N, len(all_ratings)))\n",
+    "\n",
+    "# Từ sampled ratings\n",
+    "for u, i in selected_ratings:\n",
+    "    implicit_train[u].add(i)\n"
    ]
   },
   {
