--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -585,7 +585,7 @@
     }
    ],
    "source": [
-    "model_funksvd = SurpriseFunkSVD(n_factors=50, n_epochs=1)\n",
+    "model_funksvd = SurpriseFunkSVD(n_factors=50, n_epochs=35)\n",
     "model_funksvd.fit(train_df) "
    ]
   },
@@ -682,7 +682,7 @@
     "Công thức dự đoán rating trong mô hình **SVD++** là:\n",
     "\n",
     "$$\n",
-    "\\hat{r}_{ui} = \\mu + b_u + b_i + q_i^T \\left(p_u + \\frac{1}{\\sqrt{|R(u)|}} \\sum_{j \\in R(u)} y_j \\right)\n",
+    "\\hat{r}_{ui} = \\mu + b_u + b_i + q_i^T \\left(p_u + \\frac{1}{\\sqrt{|N(u)|}} \\sum_{j \\in N(u)} y_j \\right)\n",
     "$$\n",
     "\n",
     "Trong đó:\n",
@@ -691,7 +691,7 @@
     "- $b_u$, $b_i$: độ lệch riêng của người dùng $u$ và movie $i$  \n",
     "- $p_u$, $q_i$: vector tiềm ẩn đại diện cho người dùng và movie\n",
     "- $y_j$: vector phản hồi ngầm của movie $j$\n",
-    "- $R(u)$: tập các movie mà người dùng $u$ đã đánh giá\n",
+    "- $N(u)$: tập các movie mà người dùng $u$ đã đánh giá\n",
     "\n",
     "Ý tưởng của SVD++ là kết hợp **cả thông tin explicit (rating)** và **implicit feedback (dạng hành vi như gắn tag, click, xem phim, v.v.)** để cải thiện độ chính xác khi dự đoán.\n",
     "\n",
@@ -701,7 +701,7 @@
     "Hàm mất mát của mô hình SVD++ được định nghĩa như sau:\n",
     "\n",
     "$$\n",
-    "\\sum_{r_{ui} \\in R} \\left[ \\left(r_{ui} - \\mu - b_u - b_i - q_i^T \\left(p_u + \\frac{1}{\\sqrt{|R(u)|}} \\sum_{j \\in R(u)} y_j \\right) \\right)^2 + \\lambda_1 (b_u^2 + b_i^2) + \\lambda_2 ( \\|p_u\\|^2 + \\|q_i\\|^2 ) \\right]\n",
+    "\\sum_{r_{ui} \\in R} \\left[ \\left(r_{ui} - \\mu - b_u - b_i - q_i^T \\left(p_u + \\frac{1}{\\sqrt{|N(u)|}} \\sum_{j \\in R(u)} y_j \\right) \\right)^2 + \\lambda_1 (b_u^2 + b_i^2) + \\lambda_2 ( \\|p_u\\|^2 + \\|q_i\\|^2 ) \\right]\n",
     "$$\n",
     "\n",
     "Giải thích các thành phần:\n",
@@ -730,7 +730,7 @@
     "$\n",
     "\n",
     "- $\n",
-    "q_i \\leftarrow q_i + \\gamma \\cdot \\left( e_{ui} \\cdot \\left( p_u + \\frac{1}{\\sqrt{|R(u)|}} \\sum_{j \\in R(u)} y_j \\right) - \\lambda_2 \\cdot q_i \\right)\n",
+    "q_i \\leftarrow q_i + \\gamma \\cdot \\left( e_{ui} \\cdot \\left( p_u + \\frac{1}{\\sqrt{|N(u)|}} \\sum_{j \\in N(u)} y_j \\right) - \\lambda_2 \\cdot q_i \\right)\n",
     "$\n",
     "\n",
     "- $\n",
@@ -738,14 +738,14 @@
     "$\n",
     "\n",
     "- $\n",
-    "\\forall j \\in R(u): \\quad y_j \\leftarrow y_j + \\gamma \\cdot \\left( \\frac{e_{ui}}{\\sqrt{|R(u)|}} \\cdot q_i - \\lambda_2 \\cdot y_j \\right)\n",
+    "\\forall j \\in N(u): \\quad y_j \\leftarrow y_j + \\gamma \\cdot \\left( \\frac{e_{ui}}{\\sqrt{|N(u)|}} \\cdot q_i - \\lambda_2 \\cdot y_j \\right)\n",
     "$\n",
     "\n",
     "Trong đó:\n",
     "\n",
     "- $\\gamma$: learning rate  \n",
     "- $\\lambda_1, \\lambda_2$: hệ số regularization  \n",
-    "- $R(u)$: tập các movie mà user $u$ đã đánh giá  \n",
+    "- $N(u)$: tập các movie mà user $u$ đã đánh giá  \n",
     "\n",
     "Mỗi lần cập nhật là một bước tiến nhỏ giúp mô hình tối ưu dần các tham số để giảm sai số dự đoán.\n"
    ]
@@ -1193,7 +1193,7 @@
    "source": [
     "# ======= Đánh giá trên tập train, validation và test =======\n",
     "print(\n",
-    "    f\"\\nRMSE | MAE\\n\"\n",
+    "    f\"\\nRMSE | MAE\\n\" \n",
     "    f\"Train: {model_svdpp_custom.rmse(rating_train):.4f} | {model_svdpp_custom.mae(rating_train):.4f}\\n\"\n",
     "    f\"Val  : {model_svdpp_custom.rmse(rating_val):.4f} | {model_svdpp_custom.mae(rating_val):.4f}\\n\"\n",
     "    f\"Test : {model_svdpp_custom.rmse(rating_test):.4f} | {model_svdpp_custom.mae(rating_test):.4f}\"\n",
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e64afc7b",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1263,7 @@
     "\n",
     "# Gộp cả rating lẫn tag (giả sử tag là 1 dạng feedback gián tiếp)\n",
     "combined_pairs = train_pairs.union(tagged_pairs)\n",
-    "\n",
+    " \n",
     "# Tập đánh giá rõ ràng (có rating)\n",
     "explicit_df = train_df_[['user_idx', 'movie_idx', 'rating']]\n",
     "\n",
@@ -1308,7 +1308,7 @@
    "outputs": [],
    "source": [
     "# ======= Khởi tạo và huấn luyện mô hình =======\n",
-    "model_svdpp = SVDpp(n_epochs=1, n_factors=50, verbose=True)\n",
+    "model_svdpp = SVDpp(n_epochs=5, n_factors=50, verbose=True)\n",
     "model_svdpp.fit(trainset)"
    ]
   },
