--- a/advanced_SVD/phase2.ipynb
+++ b/advanced_SVD/phase2.ipynb
@@ -788,7 +788,7 @@
     "        self.reg2 = reg2 if reg2 is not None else reg_all\n",
     "        self.epochs = epochs\n",
     "        self.decay= decay\n",
-    "\n",
+    " \n",
     "        self.num_users = num_users\n",
     "        self.num_items = num_items\n",
     "\n",
@@ -1062,77 +1062,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc78f1e6",
+   "id": "7d2ca54f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "                                                                                   \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 - Train RMSE: 0.8104 | Val RMSE: 0.8364\n"
+      "Epoch 1 - Train RMSE: 0.8600 | Val RMSE: 0.8795\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "                                                                                   \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 - Train RMSE: 0.7203 | Val RMSE: 0.8304\n"
+      "Epoch 2 - Train RMSE: 0.7776 | Val RMSE: 0.8718\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "                                                                                   \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3 - Train RMSE: 0.5160 | Val RMSE: 0.8391\n"
+      "Epoch 3 - Train RMSE: 0.5682 | Val RMSE: 0.8878\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "                                                                                   \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4 - Train RMSE: 0.3322 | Val RMSE: 0.8458\n"
+      "Epoch 4 - Train RMSE: 0.3930 | Val RMSE: 0.8997\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                   "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5 - Train RMSE: 0.2132 | Val RMSE: 0.8486\n",
+      "Epoch 5 - Train RMSE: 0.2804 | Val RMSE: 0.9052\n",
       "Early stopping at epoch 5!\n"
      ]
     },
@@ -1145,7 +1145,7 @@
     }
    ],
    "source": [
-    "# ======= Khởi tạo và huấn luyện mô hình =======\n",
+    "# ======= Train SVD++ =======\n",
     "model_svdpp_custom = SVDPP(\n",
     "    rating_train, implicit_train, n_users, n_items, \n",
     "    n_factors=50, \n",
@@ -1153,7 +1153,7 @@
     "    reg_all=0.015,\n",
     "    reg1=0.015,\n",
     "    reg2=0.02,\n",
-    "    epochs=1\n",
+    "    epochs=5\n",
     ")\n",
     "model_svdpp_custom.train(val_set=rating_val, early_stopping=True)"
    ]
@@ -1161,14 +1161,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95754b6a",
+   "id": "25807c98",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                               "
+      "                                                                                  "
      ]
     },
     {
@@ -1177,9 +1177,9 @@
      "text": [
       "\n",
       "RMSE | MAE\n",
-      "Train: 0.2157 | 0.1102\n",
-      "Val  : 0.8486 | 0.6491\n",
-      "Test : 0.8453 | 0.6469\n"
+      "Train: 0.2804 | 0.1622\n",
+      "Val  : 0.9052 | 0.6941\n",
+      "Test : 0.9054 | 0.6942\n"
      ]
     },
     {
@@ -1193,7 +1193,7 @@
    "source": [
     "# ======= Đánh giá trên tập train, validation và test =======\n",
     "print(\n",
-    "    f\"\\nRMSE | MAE\\n\" \n",
+    "    f\"\\nRMSE | MAE\\n\"\n",
     "    f\"Train: {model_svdpp_custom.rmse(rating_train):.4f} | {model_svdpp_custom.mae(rating_train):.4f}\\n\"\n",
     "    f\"Val  : {model_svdpp_custom.rmse(rating_val):.4f} | {model_svdpp_custom.mae(rating_val):.4f}\\n\"\n",
     "    f\"Test : {model_svdpp_custom.rmse(rating_test):.4f} | {model_svdpp_custom.mae(rating_test):.4f}\"\n",
